# notspot_sim_cpp

./: README.md
src/notspot_controller/: CMakeLists.txt  package.xml
src/notspot_controller/include/notspot_controller/: CrawlGaitController.hpp  GaitController.hpp  InverseKinematics.hpp  PIDController.hpp  RestController.hpp  RobotController.hpp  StandController.hpp  StateCommand.hpp  Transformations.hpp  TrotGaitController.hpp
src/notspot_controller/launch/: robot_controller.launch
src/notspot_controller/src/: main.cpp
src/notspot_controller/src/InverseKinematics/: InverseKinematics.cpp
src/notspot_controller/src/RobotController/: CrawlGaitController.cpp  GaitController.cpp  PIDController.cpp  RestController.cpp  RobotController.cpp  StandController.cpp  TrotGaitController.cpp
src/notspot_controller/src/RoboticsUtilities/: Transformations.cpp
src/notspot_description/: CMakeLists.txt
src/notspot_gazebo/: CMakeLists.txt
src/notspot_joystick/: CMakeLists.txt  package.xml
src/notspot_joystick/include/notspot_joystick/: PS4_controller.hpp
src/notspot_joystick/launch/: ramped_joystick.launch
src/notspot_joystick/src/: PS4_controller.cpp  main.cpp
