<?xml version="1.0"?>
<package format="2">
  <name>notspot_controller</name>
  <version>1.0.0</version>
  <description>The notspot_controller package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
